Archive/345a93af6117592708683fc4da7bd443-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp:27:27: error: call to non-constexpr function ‘E operator|(E, E) [with E = foo; typename std::enable_if<is_flags<E>::value, int>::type ...<anonymous> = {}]’
 constexpr foo ab = foo::a | foo::b;
                           ^
